tests/parsing/smtlib/v2.6/errors/004_qual_identifier_bad_identifier_1.expected
File "tests/parsing/smtlib/v2.6/errors/004_qual_identifier_bad_identifier_1.smt2", line 2, character 12-13:
2 | (assert (as _ foo))
                ^
Error while parsing a qualified identifier, read the reserved word '_',
      but expected an identifier. Note that keywords (such as '_', 'as', ...)
      are not identifiers, and thus are not allowed here..
